--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,11 +7,19 @@ variables:
 
 repackage:
   stage: build
+  image: php:8.3-cli
   only:
     - main
+  before_script:
+    - apt-get update && apt-get install -y git zip unzip
+    - docker-php-ext-install pcntl
+    - php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
+    - php composer-setup.php
+    - php -r "unlink('composer-setup.php');"
+    - mv composer.phar /usr/local/bin/composer
+    - composer install --no-progress --prefer-dist
   script:
     - echo "Repackaging your application into a PHAR file..."
-    - composer install
     - vendor/bin/castor repack --app-name=cpamg
     - mkdir -p ${RELEASES_DIR}
     - mv cpamg.phar ${RELEASES_DIR}/cpamg.phar
